Compiler/lab4/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC error RC

   15 OptTag: /* empty */
   16       | ID

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec
   27         | COMMA error
   28         | error COMMA
   29         | error RP

   30 CompSt: LC DefList StmtList RC
   31       | error RC

   32 StmtList: /* empty */
   33         | Stmt StmtList

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | error RP
   42     | Exp error

   43 DefList: /* empty */
   44        | Def DefList

   45 Def: Specifier DecList SEMI
   46    | Specifier DecList error

   47 DecList: Dec
   48        | Dec COMMA DecList
   49        | Dec COMMA error

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp
   52    | VarDec ASSIGNOP error

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT
   71    | error RB
   72    | ASSIGNOP error
   73    | error ASSIGNOP

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 20 23 27 28 29 31 40 41 42 46 49 52 71 72 73
INT (258) 19 69
FLOAT (259) 70
ID (260) 16 17 18 21 22 64 65 67 68
TYPE (261) 10
STRUCT (262) 12 13 14
RETURN (263) 36
IF (264) 37 38
ELSE (265) 38
WHILE (266) 39
SEMI (267) 4 5 7 34 36 40 45
COMMA (268) 9 24 27 28 48 49 74
ASSIGNOP (269) 51 52 53 72 73
RELOP (270) 56
PLUS (271) 57
MINUS (272) 58 62
STAR (273) 59
DIV (274) 60
AND (275) 54
OR (276) 55
DOT (277) 67
NOT (278) 63
LP (279) 21 22 37 38 39 61 64 65
RP (280) 21 22 23 29 37 38 39 41 61 64 65
LB (281) 19 20 66
RB (282) 19 20 66 71
LC (283) 12 14 30
RC (284) 12 14 30 31
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 3
ExtDef (34)
    on left: 4 5 6 7, on right: 3
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 26 45 46
StructSpecifier (37)
    on left: 12 13 14, on right: 11
OptTag (38)
    on left: 15 16, on right: 12 14
Tag (39)
    on left: 17, on right: 13
VarDec (40)
    on left: 18 19 20, on right: 8 9 19 20 26 50 51 52
FunDec (41)
    on left: 21 22 23, on right: 6
VarList (42)
    on left: 24 25, on right: 21 24
ParamDec (43)
    on left: 26 27 28 29, on right: 24 25
CompSt (44)
    on left: 30 31, on right: 6 35
StmtList (45)
    on left: 32 33, on right: 30 33
Stmt (46)
    on left: 34 35 36 37 38 39 40 41 42, on right: 33 37 38 39
DefList (47)
    on left: 43 44, on right: 12 30 44
Def (48)
    on left: 45 46, on right: 44
DecList (49)
    on left: 47 48 49, on right: 45 46 48
Dec (50)
    on left: 50 51 52, on right: 47 48 49
Exp (51)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73, on right: 34 36 37 38 39 42 51 53 54 55 56 57 58 59 60
    61 62 63 66 67 74 75
Args (52)
    on left: 74 75, on right: 64 74


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


state 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


state 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


state 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


state 10

   16 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 17 (Tag)


state 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


state 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 15

   23 FunDec: error . RP

    RP  shift, and go to state 22


state 16

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


state 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


state 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


state 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


state 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . error RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


state 22

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


state 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    error   shift, and go to state 34
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    COMMA   shift, and go to state 35
    RP      shift, and go to state 36

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


state 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 19


state 26

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 42
    INT    shift, and go to state 43


state 27

   31 CompSt: error . RC

    RC  shift, and go to state 44


state 28

   30 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 33


state 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 30

   14 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 46


state 31

   45 Def: Specifier . DecList SEMI
   46    | Specifier . DecList error

    ID  shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


state 32

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 50


state 33

   44 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 33


state 34

   28 ParamDec: error . COMMA
   29         | error . RP

    COMMA  shift, and go to state 52
    RP     shift, and go to state 53


state 35

   27 ParamDec: COMMA . error

    error  shift, and go to state 54


state 36

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


state 37

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  go to state 55


state 38

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


state 39

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 25 (VarList)


state 40

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 41

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 42

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 58


state 43

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


state 44

   31 CompSt: error RC .

    $default  reduce using rule 31 (CompSt)


state 45

   30 CompSt: LC DefList . StmtList RC

    error     shift, and go to state 60
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    RETURN    shift, and go to state 64
    IF        shift, and go to state 65
    WHILE     shift, and go to state 66
    ASSIGNOP  shift, and go to state 67
    MINUS     shift, and go to state 68
    NOT       shift, and go to state 69
    LP        shift, and go to state 70
    LC        shift, and go to state 28

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 71
    StmtList  go to state 72
    Stmt      go to state 73
    Exp       go to state 74


state 46

   14 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 14 (StructSpecifier)


state 47

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp
   52    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 26

    $default  reduce using rule 50 (Dec)


state 48

   45 Def: Specifier DecList . SEMI
   46    | Specifier DecList . error

    error  shift, and go to state 76
    SEMI   shift, and go to state 77


state 49

   47 DecList: Dec .
   48        | Dec . COMMA DecList
   49        | Dec . COMMA error

    COMMA  shift, and go to state 78

    $default  reduce using rule 47 (DecList)


state 50

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


state 51

   44 DefList: Def DefList .

    $default  reduce using rule 44 (DefList)


state 52

   28 ParamDec: error COMMA .

    $default  reduce using rule 28 (ParamDec)


state 53

   29 ParamDec: error RP .

    $default  reduce using rule 29 (ParamDec)


state 54

   27 ParamDec: COMMA error .

    $default  reduce using rule 27 (ParamDec)


state 55

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


state 56

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


state 57

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 34
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    COMMA   shift, and go to state 35

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 79
    ParamDec         go to state 39


state 58

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


state 59

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 60

   31 CompSt: error . RC
   40 Stmt: error . SEMI
   41     | error . RP
   71 Exp: error . RB
   73    | error . ASSIGNOP

    SEMI      shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    RP        shift, and go to state 82
    RB        shift, and go to state 83
    RC        shift, and go to state 44


state 61

   69 Exp: INT .

    $default  reduce using rule 69 (Exp)


state 62

   70 Exp: FLOAT .

    $default  reduce using rule 70 (Exp)


state 63

   64 Exp: ID . LP Args RP
   65    | ID . LP RP
   68    | ID .

    LP  shift, and go to state 84

    $default  reduce using rule 68 (Exp)


state 64

   36 Stmt: RETURN . Exp SEMI

    error     shift, and go to state 85
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 67
    MINUS     shift, and go to state 68
    NOT       shift, and go to state 69
    LP        shift, and go to state 70

    Exp  go to state 86


state 65

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 87


state 66

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 88


state 67

   72 Exp: ASSIGNOP . error

    error  shift, and go to state 89


state 68

   62 Exp: MINUS . Exp

    error     shift, and go to state 85
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 67
    MINUS     shift, and go to state 68
    NOT       shift, and go to state 69
    LP        shift, and go to state 70

    Exp  go to state 90


state 69

   63 Exp: NOT . Exp

    error     shift, and go to state 85
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 67
    MINUS     shift, and go to state 68
    NOT       shift, and go to state 69
    LP        shift, and go to state 70

    Exp  go to state 91


state 70

   61 Exp: LP . Exp RP

    error     shift, and go to state 85
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 67
    MINUS     shift, and go to state 68
    NOT       shift, and go to state 69
    LP        shift, and go to state 70

    Exp  go to state 92


state 71

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


state 72

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 93


state 73

   33 StmtList: Stmt . StmtList

    error     shift, and go to state 60
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    RETURN    shift, and go to state 64
    IF        shift, and go to state 65
    WHILE     shift, and go to state 66
    ASSIGNOP  shift, and go to state 67
    MINUS     shift, and go to state 68
    NOT       shift, and go to state 69
    LP        shift, and go to state 70
    LC        shift, and go to state 28

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 71
    StmtList  go to state 94
    Stmt      go to state 73
    Exp       go to state 74


state 74

   34 Stmt: Exp . SEMI
   42     | Exp . error
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    error     shift, and go to state 95
    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    RELOP     shift, and go to state 98
    PLUS      shift, and go to state 99
    MINUS     shift, and go to state 100
    STAR      shift, and go to state 101
    DIV       shift, and go to state 102
    AND       shift, and go to state 103
    OR        shift, and go to state 104
    DOT       shift, and go to state 105
    LB        shift, and go to state 106


state 75

   51 Dec: VarDec ASSIGNOP . Exp
   52    | VarDec ASSIGNOP . error

    error     shift, and go to state 107
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 67
    MINUS     shift, and go to state 68
    NOT       shift, and go to state 69
    LP        shift, and go to state 70

    Exp  go to state 108


state 76

   46 Def: Specifier DecList error .

    $default  reduce using rule 46 (Def)


state 77

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


state 78

   48 DecList: Dec COMMA . DecList
   49        | Dec COMMA . error

    error  shift, and go to state 109
    ID     shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 110
    Dec      go to state 49


state 79

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


state 80

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


state 81

   73 Exp: error ASSIGNOP .

    $default  reduce using rule 73 (Exp)


state 82

   41 Stmt: error RP .

    $default  reduce using rule 41 (Stmt)


state 83
